--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   
   <body>
     <div id="root"></div>
-    <script src="./public/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
