Show dynamic generated components

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <Title>React TypeScript</Title>
+    <link rel="stylesheet" href="./dist/styles/bootstrap.css">
   </head>
   
   <body>
